Correctly render coverage when no lines are covered or uncovered
Summary:
While perhaps accurate 'NaN%' isn't the preferred rendering.
Before:
{F315066}
After:
{F315065}

Test Plan: Manual

Reviewers: treaster

Reviewed By: treaster

Subscribers: changesbot

Projects: #changes_ui

Differential Revision: https://tails.corp.dropbox.com/D170326

--- a/webapp/css/display.less
+++ b/webapp/css/display.less
@@ -145,6 +145,15 @@ tr.gridHeader {
 }
 
 /*
+ * For when we want to render coverage percent, but it is NaN.
+ * This pads to align the '-' with normal percentage numbers.
+ */
+.noCoverPercent:before {
+  content: "-";
+  padding-right: 1em;
+}
+
+/*
  * Error Box
  */
 
